# curve_intersection

./: CMakeLists.txt  README.md
curve_intersection_tests/: circle_curve_tests.cpp  curve_intersection_tests.cpp  ellipse_tests.cpp  line_tests.cpp
examples/: TestBezierEllipse.txt  TestCircleLine.txt  TestLineLine.txt
include/curve_intersection/: Base_Structures.hxx  Point.hxx  Vector.hxx
include/curve_intersection/Core/: Constants.hxx  Point.hxx  Range.hxx
include/curve_intersection/Curves/: Bezier.hxx  BezierCurve.hxx  CircleCurve.hxx  Ellipse.hxx  EllipseCurve.hxx  ICurve.hxx  LineCurve.hxx  LineSegment.hxx
include/curve_intersection/Intersection/: Box.hxx  ConjugateGradientMethod.hxx  CurveIntersection.hxx  EvaluationLipschitzConstant.hxx  GoldenRatio.hxx  LocalMethod.hxx  MethodDivisionThree.hxx
include/curve_intersection/Serializer/: BezierCurveSerializer.hxx  CircleCurveSerializer.hxx  CurveExchanger.hxx  EllipseCurveSerializer.hxx  EllipseSerializer.hxx  FormattedCurveSerializer.hxx  ICurveSerializer.hxx  LineCurveSerializer.hxx  LineSegmentSerializer.hxx  Serializer.hxx
src/: Base_Structures.hxx  BezierCurve.cxx  BezierCurve.hxx  BezierCurveSerializer.cxx  BezierCurveSerializer.hxx  CurveExchanger.cxx  CurveExchanger.hxx  CurveIntersection.cxx  EllipseCurve.cxx  EllipseCurve.hxx  EllipseCurveSerializer.hxx  EvaluationLipschitzConstant.cxx  FormattedCurveSerializer.cxx  FormattedCurveSerializer.hxx  GoldenRatio.hxx  LineCurve.cxx  LineCurve.hxx  LineCurveSerializer.cxx  LocalMethod.hxx  MethodDivisionThree.cxx  main.cpp
src/curve_intersection/Curves/: Bezier.cxx  BezierCurve.cxx  CircleCurve.cxx  Ellipse.cxx  EllipseCurve.cxx  ICurve.cxx  LineCurve.cxx  LineSegment.cxx
src/curve_intersection/Intersection/: ConjugateGradientMethod.cxx  CurveIntersection.cxx  EvaluationLipschitzConstant.cxx  GoldenRatio.cxx  MethodDivisionThree.cxx
src/curve_intersection/Serializer/: BezierCurveSerializer.cxx  CircleCurveSerializer.cxx  CurveExchanger.cxx  EllipseCurveSerializer.cxx  EllipseSerializer.cxx  FormattedCurveSerializer.cxx  LineCurveSerializer.cxx  LineSegmentSerializer.cxx
tests/: BezierCurveSerializer_Tests.cxx  Bezier_Tests.cxx  CMakeLists.txt  CircleSerializer_Tests.cxx  Circle_Tests.cxx  EllipseSerializer_Tests.cxx  Ellipse_Tests.cxx  LineSegmentSerializer_Tests.cxx  Line_Tests.cxx  Point_Test.cxx  Vector_Test.cxx  bezier_curve_test.cxx  circle_tests.cxx  curve_intersection_tests.cxx  ellipse_tests.cxx  intersector_test.cxx  line_tests.cxx  vector_test.cxx
