project(curveintersection CXX)
cmake_minimum_required(VERSION 2.6)
set(CMAKE_INSTALL_PREFIX ${CMAKE_CURRENT_SOURCE_DIR}/../)

add_subdirectory(3rdParty)

set ( SRC_DIR ${PROJECT_SOURCE_DIR}/src )
include_directories (${CMAKE_CURRENT_SOURCE_DIR}/include/curve_intersection/Curves)
include_directories (${CMAKE_CURRENT_SOURCE_DIR}/include/curve_intersection/Intersection)
include_directories (${CMAKE_CURRENT_SOURCE_DIR}/include/curve_intersection/Serializer)
include_directories (${CMAKE_CURRENT_SOURCE_DIR}/include/curve_intersection)
list(APPEND SRC ${SRC_DIR}/curve_intersection/Curves/BezierCurve.cxx)
list(APPEND SRC ${SRC_DIR}/curve_intersection/Curves/CircleCurve.cxx)
list(APPEND SRC ${SRC_DIR}/curve_intersection/Curves/LineCurve.cxx)
list(APPEND SRC ${SRC_DIR}/curve_intersection/Curves/EllipseCurve.cxx)
list(APPEND SRC ${SRC_DIR}/curve_intersection/Intersection/ConjugateGradientMethod.cxx)
list(APPEND SRC ${SRC_DIR}/curve_intersection/Intersection/CurveIntersection.cxx)
list(APPEND SRC ${SRC_DIR}/curve_intersection/Intersection/EvaluationLipschitzConstant.cxx)
list(APPEND SRC ${SRC_DIR}/curve_intersection/Intersection/GoldenRatio.cxx)
list(APPEND SRC ${SRC_DIR}/curve_intersection/Intersection/MethodDivisionThree.cxx)
list(APPEND SRC ${SRC_DIR}/curve_intersection/Serializer/BezierCurveSerializer.cxx)
list(APPEND SRC ${SRC_DIR}/curve_intersection/Serializer/CircleCurveSerializer.cxx)
list(APPEND SRC ${SRC_DIR}/curve_intersection/Serializer/CurveExchanger.cxx)
list(APPEND SRC ${SRC_DIR}/curve_intersection/Serializer/EllipseCurveSerializer.cxx)
list(APPEND SRC ${SRC_DIR}/curve_intersection/Serializer/FormattedCurveSerializer.cxx)
list(APPEND SRC ${SRC_DIR}/curve_intersection/Serializer/LineCurveSerializer.cxx)
add_library(${PROJECT_NAME} SHARED ${SRC})